preliminary collection object #17 & create view #18
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@12 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/site_base.html
+++ b/genrepo/templates/site_base.html
@@ -17,7 +17,8 @@ GenRepo Prototype
 {% load eulcore_tags %}
 
 {% block navbar-items %}
-{#    <li><a href="{% url collection:browse %}">Collections</a></li> #}
+  {# link to new collection for now, since that is all we have #}
+   <li><a href="{% url collections:new %}">Collections</a></li>
 {% endblock %}
 
 {% block content-header %}
