unit tests & fedora error handling for collection creation view #18
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@13 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/site_base.html
+++ b/genrepo/templates/site_base.html
@@ -18,7 +18,7 @@ GenRepo Prototype
 
 {% block navbar-items %}
   {# link to new collection for now, since that is all we have #}
-   <li><a href="{% url collections:new %}">Collections</a></li>
+   <li><a href="{% url collection:new %}">Collections</a></li>
 {% endblock %}
 
 {% block content-header %}
