--- a/genrepo/templates/site_index.html
+++ b/genrepo/templates/site_index.html
@@ -9,7 +9,7 @@
 <div>
 <p>What would you like to do today?</p>
 <ul>
-  <li><a href="{% url collections:new %}">Create a new collection</a></li>
+  <li><a href="{% url collection:new %}">Create a new collection</a></li>
 </ul>
 </div>
 {% endblock %}
