--- a/genrepo/templates/collection/edit.html
+++ b/genrepo/templates/collection/edit.html
@@ -1,8 +1,17 @@
 {% extends 'collection/base.html' %}
 
-{% block page-subtitle %}{{ block.super }} : Create{% endblock %}
+{% block page-subtitle %}{{ block.super }} :
+{% if obj.exists %} {{ obj.pid }} : Update
+{% else %} Create{% endif %}
+{% endblock %}
 {% block content-body %}
-<h1>Create a new collection</h1>
+<h1>{% if obj.exists %}Update {{ obj.label }}
+{% else %}Create a new collection {% endif %}
+</h1>
+{% if obj.exists %}
+  <p>Created {{ obj.created }}; last modified {{ obj.modified }}</p>
+{% endif %}
+
 <form method="post">{% csrf_token %}
   <table>
     {{ form.as_table }}
