clean up collection view code #21
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@36 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/collection/view.html
+++ b/genrepo/templates/collection/view.html
@@ -2,14 +2,8 @@
 
 
 {% block content-body %}
-    <h1>
-        {% if obj.exists %}
-            {{ obj.label }}
-        {% endif %}
-    </h1>
-    {% if obj.exists %}
-      <p>Created {{ obj.created }}; last modified {{ obj.modified }}</p>
-      <p>{{ obj.dc.content.description }}</p>
-    {% endif %}
+    <h1>{{ obj.label }}</h1>
+    <p>Created {{ obj.created }}; last modified {{ obj.modified }}</p>
+    <p>{{ obj.dc.content.description }}</p>
 
 {% endblock %}
