--- a/genrepo/templates/site_base.html
+++ b/genrepo/templates/site_base.html
@@ -18,7 +18,7 @@ GenRepo Prototype
 
 {% block navbar-items %}
   {# link to new collection for now, since that is all we have #}
-   <li><a href="{% url collection:new %}">Collections</a></li>
+   <li><a href="{% url collection:list %}">Collections</a></li>
 {% endblock %}
 
 {% block content-header %}
