wrap admin site with genlib theme
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@40 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/admin/base_site.html
+++ b/genrepo/templates/admin/base_site.html
@@ -1,15 +1,8 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}GenRepo Prototype{% endblock %}
+{% block title %}: Django Admin{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">GenRepo Prototype</h1>
-{% endblock %}
-
-{% block nav-global %}
-<ul>
-   <li><a href="{% url site-index %}">Site Home</a></li>  
-   <li><a href="{% url collection:new %}">Collections</a></li>
-</ul>
+<p style="font-size:80%">Django DB Administration</p>
 {% endblock %}
