tweak site & admin base templates
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@41 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/admin/base.html
+++ b/genrepo/templates/admin/base.html
@@ -62,7 +62,7 @@ should extend either of the genlib themes). {% endcomment %}
             {% endblock %}
         </div>
         {% endif %}
-{{ block.super }}   {# comment this out if it conflicts/overlaps with your base site #}
+{#{{ block.super }}#}   {# suppress duplicate logout/username info #}
 {% endblock %}
 
 {% block content-body %}
