--- a/genrepo/templates/site_index.html
+++ b/genrepo/templates/site_index.html
@@ -1,24 +1,19 @@
 {% extends 'site_base.html' %}
 
 {% block content-body %}
- {% if not user.is_authenticated %}
-     <a href="{% url accounts:login %}?next={% url site-index %}">Login</a>
- {% endif %}
  {{ block.super }}
 
-{% if user.is_authenticated %}
 <div>
   <p>What would you like to do today?</p>
-  {% if perms.collection %} {# revise as we add actions #}
     <ul>
       {% if perms.collection.add_collection %}
-      <li><a href="{% url collection:new %}">Create a new collection</a></li>
+        <li><a href="{% url collection:new %}">Create a new collection</a></li>
       {% endif %}
+       <li><a href="{% url collection:list %}">Browse existing collections</a></li>
     </ul>
-  {% else %}
-    <p>Sorry, you don't have permission to do anything yet.</p>
-  {% endif %}
-  
 </div>
+
+{% if not user.is_authenticated %}
+  <p>You may want to Please log for full permissions.</p>
 {% endif %}
 {% endblock %}
