--- a/genrepo/templates/site_index.html
+++ b/genrepo/templates/site_index.html
@@ -9,7 +9,9 @@
       {% if perms.collection.add_collection %}
         <li><a href="{% url collection:new %}">Create a new collection</a></li>
       {% endif %}
-       <li><a href="{% url collection:list %}">Browse existing collections</a></li>
+      <li><a href="{% url collection:list %}">Browse existing collections</a></li>
+      {# TODO: ingest permissions check #}
+      <li><a href="{% url file:ingest %}">Ingest a file</a></li>
     </ul>
 </div>
 
