check for permission to add files for file ingest action #32
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@56 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/site_index.html
+++ b/genrepo/templates/site_index.html
@@ -10,8 +10,9 @@
         <li><a href="{% url collection:new %}">Create a new collection</a></li>
       {% endif %}
       <li><a href="{% url collection:list %}">Browse existing collections</a></li>
-      {# TODO: ingest permissions check #}
-      <li><a href="{% url file:ingest %}">Ingest a file</a></li>
+      {% if perms.file.add_file %}
+        <li><a href="{% url file:ingest %}">Ingest a file</a></li>
+      {% endif %}
     </ul>
 </div>
 
