link from collection to upload items; pre-select collection by uri specified in url params on GET #33
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@60 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/collection/view.html
+++ b/genrepo/templates/collection/view.html
@@ -10,4 +10,9 @@
     {% if perms.collection.change_collection %}
        <p><a href="{% url collection:edit obj.pid %}">edit</a></p>
     {% endif %}
+
+    {% if perms.file.add_file %}
+       <p><a href="{% url file:ingest %}?collection={{ obj.uri }}">Add files to this collection</a></p>
+    {% endif %}
+
 {% endblock %}
