--- a/genrepo/templates/collection/edit.html
+++ b/genrepo/templates/collection/edit.html
@@ -1,20 +1,21 @@
-{% extends 'collection/base.html' %}
+ {% extends 'collection/base.html' %}
 
 {% block page-subtitle %}{{ block.super }} :
 {% if obj.exists %} {{ obj.pid }} : Update
 {% else %} Create{% endif %}
 {% endblock %}
+
+{% block content-title %}{% if obj.exists %}Update {{ obj.label }}
+{% else %}Create a new collection {% endif %}{% endblock %}
+
 {% block content-body %}
-<h1>{% if obj.exists %}Update {{ obj.label }}
-{% else %}Create a new collection {% endif %}
-</h1>
 {% if obj.exists %}
   <p>Created {{ obj.created }}; last modified {{ obj.modified }}</p>
 {% endif %}
 
 <form method="post">{% csrf_token %}
   <table>
-    {{ form.as_table }}
+   {{ form.as_p }}
   </table>
   <input type="submit" value="Save"/>
 </form>
