add requested repeating fields to file dc edit form #48
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@67 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/media/style/local.css
+++ b/genrepo/media/style/local.css
@@ -13,3 +13,9 @@ input[type='text'], textarea {
 input.readonly {
     border:0px;
 }
+/* make subform headings look like form labels */
+.subform .label {
+    font: bold 1.16667em/14px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+    color:#3e6280;
+    margin-bottom: 0px;
+}
