link to file download from file edit page #37
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@69 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/file/edit.html
+++ b/genrepo/templates/file/edit.html
@@ -6,6 +6,7 @@
 
 {% block content-body %}
 <p>Created {{ obj.created }}; last modified {{ obj.modified }}</p>
+<p><a href="{% url file:download obj.pid %}">Download</a></p>
 
 <form method="post">{% csrf_token %}
   <table>
