correct template - load fedora template tag
git-svn-id: https://svn.library.emory.edu/svn/small_projects/generic-ingest/trunk@80 3b3aa91a-af69-469c-bc34-363fb7a4683f

--- a/genrepo/templates/collection/view.html
+++ b/genrepo/templates/collection/view.html
@@ -1,4 +1,5 @@
 {% extends 'collection/base.html' %}
+{% load fedora %}
 
 {% block page-subtitle %}{{ block.super }} : {{ obj.label }} {% endblock %}
 {% block content-title %}{{ obj.label }}{% endblock %}
